# deep_learning_course

./: Practical 2.ipynb  Practical 3.ipynb  Practical Session 1.ipynb  README.md  pyproject.toml
