[tool.poetry]
name = "fleuret course"
version = "0.1.0"
description = ""
authors = ["ai manager <ai.manager@energie-expert.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
notebook = "^7.2.1"
torch = "^2.4.0"
torchaudio = "^2.4.0"
torchvision = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
